--- a/blog.html
+++ b/blog.html
@@ -153,7 +153,7 @@
 
                                 <!-- Begin Mailchimp Signup Form -->
                                 <!-- <div class="center"> -->
-                                    <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+                                    <!-- <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
                                     <style type="text/css">
                                         #mc_embed_signup{text-align:center; border:1px solid#00aced; border-radius: 25px; background: #c0deed; font:14px Helvetica,Arial,sans-serif; margin-left:25%; margin-right:25%;}
                                         /*#mc_embed_signup  input { width: 30%; height: 50%;}*/
@@ -164,24 +164,24 @@
                                         <div id="mc_embed_signup_scroll">
                                         <h2><font size="5px" style="color:#0082b4;">Get Notified When My Blog Launches</font></h2>
                                             <div class="mc-field-group">
-                                                <input type="text" value="" name="MMERGE1" id="mce-MMERGE1" placeholder="Your Name (optional)" style="border:1px solid#A9A9A9; border-radius: 3px;">
+                                                <input type="text" value="" name="MMERGE1" id="mce-MMERGE1" placeholder="Your email? (optional)" style="border:1px solid#A9A9A9; border-radius: 3px;">
                                             </div>
                                             <br>
                                             <div class="mc-field-group">
-                                                <input type="text" value="" name="MMERGE1" id="mce-MMERGE1" placeholder="Your Email (required)" style="border:1px solid#A9A9A9; border-radius: 3px;">
+                                                <input type="text" value="" name="MMERGE1" id="mce-MMERGE1" placeholder="Your name? (required)" style="border:1px solid#A9A9A9; border-radius: 3px;">
                                             </div>
                                             <br>
                                         <div id="mce-responses" class="clear">
                                             <div class="response" id="mce-error-response" style="display:none"></div>
                                             <div class="response" id="mce-success-response" style="display:none"></div>
                                         </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                                        <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_fb192a0a1e9f21d632147a49a_f593daccd7" tabindex="-1" value=""></div>
-                                        <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn" style="background-color:#1b95e0; font-size: larger; color:white; margin-left:25%; margin-right:25%;" color="#0084FF">
+                                       <!--  <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_fb192a0a1e9f21d632147a49a_f593daccd7" tabindex="-1" value=""></div> -->
+                                        <!-- <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn" style="background-color:#1b95e0; border-radius: 5px; font-size: larger; color:white; margin-left:25%; margin-right:25%;" color="#0084FF">
                                         </div>
                                         <br>
                                     </form>
                                     </div>
-                                    <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[1]='MMERGE1';ftypes[1]='text';fnames[0]='EMAIL';ftypes[0]='email';fnames[2]='MMERGE2';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+                                    <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[1]='MMERGE1';ftypes[1]='text';fnames[0]='EMAIL';ftypes[0]='email';fnames[2]='MMERGE2';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>  -->
                                 <!-- </div> -->
 <!--End mc_embed_signup-->
 
@@ -192,7 +192,7 @@
                                                 /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
                                                    We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
                                             </style> -->
-                                            <!-- <div class="container contact-form" style="text-align:center; width:575px; height:225px; border:1px solid#00aced; border-radius: 25px; background: #c0deed;">
+                                            <div style="text-align:center; border:1px solid#00aced; border-radius: 25px; background: #c0deed; margin-right: 25%; margin-left: 25%;">
                                                 <div id="mc_embed_signup">
                                                     <form action="https://saberatalukder.us19.list-manage.com/subscribe/post?u=fb192a0a1e9f21d632147a49a&amp;id=f593daccd7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                                                         <div id="mc_embed_signup_scroll" style="text-align:center;">
@@ -201,29 +201,34 @@
                                                         <div class="row">
                                                             <div class="col-md-12" style="align-content:center">
                                                 
-                                                                <div class="mc-field-group">
+                                                                <div class="mc-field-group" style="margin-left: 15%; margin-right: 15%;">
                                                                     <input type="text" value="" name="MMERGE1" class="form-control" id="mce-MMERGE1" placeholder="Your Name (optional)">
                                                                 </div>
                                                                 <br>
 
-                                                                <div class="mc-field-group">
+                                                                <div class="mc-field-group" style="margin-left: 15%; margin-right: 15%;">
                                                                     <input type="email" value="" name="EMAIL" class="form-control" id="mce-EMAIL" placeholder="Your Email (required)">
                                                                 </div>
                                                                 <br>
                                                                 <div id="mce-responses" class="clear">
                                                                     <div class="response" id="mce-error-response" style="display:none"></div>
                                                                     <div class="response" id="mce-success-response" style="display:none"></div>
-                                                                </div>    real people should not fill this in and expect good things - do not remove this or risk form bot signups
+                                                                </div> 
+
+                                                                <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups -->
                                                                 <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_fb192a0a1e9f21d632147a49a_f593daccd7" tabindex="-1" value=""></div>
+                                                                <!-- end -->
+
                                                                 <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn" style="background-color:#1b95e0; font-size: larger; color:white;" color="#0084FF">
                                                                 </div>
+                                                                <br>
                                                                 
                                                             </div>
 
                                                         </div>
                                                     </form>
                                                 </div>
-                                            </div>  -->
+                                            </div> 
                                             <!-- <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[1]='MMERGE1';ftypes[1]='text';fnames[0]='EMAIL';ftypes[0]='email';fnames[2]='MMERGE2';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
  -->
                                   <!--   </font>
