--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <!-- <h2 class="brand-before">
                         <small>Welcome to</small>
                     </h2> -->
-                    <h1 class="brand-name" style="padding-top:15px">Welcome to my website!</h1>
+                    <h1 class="brand-name" style="padding-top:15px">Welcome to my home page!</h1>
                     <!-- <hr class="tagline-divider"> -->
                     <!--<h2>
                         <small>By
@@ -201,7 +201,7 @@
                         <br>
                         <p style="text-indent: 40px"> First off thanks for visiting my personal page! My name is Sabera Talukder and I am currently a software engineer and experimentalist at the Chan Zuckerberg Biohub where I work on many things related to the brain! I graduated from Stanford University, with a double major with honors in both electrical engineering and biology. <!-- During my time at Stanford I worked on two main projects: building <a href="https://superlab.stanford.edu/poster/COMPEL2017_paper_Sabera.pdf"> a portable electrostatic precipitator to reduce respiratory deaths in rural environments </a> which was published at 2017 IEEE Compel, and decipering how <a href=https://stacks.stanford.edu/file/druid:ps667dn9376/Talukder_Sabera_BioThesis.pdf> no-net motion visual memories can be entrained and instantiated in fruit flies</a>.  --> Visit my project page to learn more about what I have worked on! <br>
                         </p>
-                        <p style="text-indent: 40px"> Other than work I love to travel, dance salsa, run, do any water sport, and eat amazing foods. Throughout my site you'll see photos of me doing just that! I hope you have a great time getting to know me in an albeit limited capacity!</p>
+                        <p style="text-indent: 40px"> Other than work I love to travel, dance salsa, run, do any water sport, and eat amazing foods. Throughout my site you'll see photos of me doing just that! I hope you have a great time getting to know me in a broad albeit limited capacity!</p>
                         </font>
                             
                 </div>
