--- a/blog.html
+++ b/blog.html
@@ -11,6 +11,7 @@
       gtag('js', new Date());
 
       gtag('config', 'UA-125400271-1');
+      //var disqus_url = '{{ site.url }}{{ page.url }}';
     </script>
 
     <meta charset="utf-8">
@@ -106,9 +107,10 @@
                 </div>
 
                 <br><br><br><br><br><br>
+                <p>Testing github!</p>
                   <!--   <div class="col-lg-20" style=" margin-left:5%; margin-right:2%;">
                     <h3>
-                                        <a href="what_is_neuroengineering.html" style="color:#0082b4" align="left">What is Neuroengineering?</a> <small>October 15, 2018</small>
+                                        <a href="what_is_neuroengineering.html" style="color:#0082b4" align="left">What is Neuroengineering?</a> <small>October 22, 2018</small>
                                         <br>
                                         <button type="button" class="btn btn-info" onclick="window.location.href='neuroTag.html'" style="font-size:18px;font:bold; background-color:#FF8500; border-color:#FF8500;"><b>Neuro</b></button>
                                         <button type="button" class="btn btn-info" onclick="window.location.href='AItag.html'" style="font-size:18px;font:bold; background-color:#FF2C00; border-color:#FF2C00;"><b>AI</b></button>
@@ -134,7 +136,6 @@
                                 <hr>
  -->
                                     <!-- Begin MailChimp Signup Form -->
-                                    <p>DEBUG DEBUG DEBUG</p>
                                             <div style="text-align:center; border:1px solid#00aced; border-radius: 25px; background: #c0deed; margin-right: 25%; margin-left: 25%;">
                                                 <div id="mc_embed_signup">
                                                     <form action="https://saberatalukder.us19.list-manage.com/subscribe/post?u=fb192a0a1e9f21d632147a49a&amp;id=f593daccd7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
@@ -177,7 +178,6 @@
                 <div class="clearfix"></div>
             </div>
         </div>
-        <p>Disqus should be appearing!!</p>
 
         <div id="disqus_thread"></div>
         <script>
@@ -192,6 +192,7 @@
         };
         */
         (function() { // DON'T EDIT BELOW THIS LINE
+            //var disqus_url = '{{ site.url }}{{ page.url }}';
         var d = document, s = d.createElement('script');
         s.src = 'https://saberatalukder.disqus.com/embed.js';
         s.setAttribute('data-timestamp', +new Date());
