--- a/neural_activity_collecting_hardware.html
+++ b/neural_activity_collecting_hardware.html
@@ -107,7 +107,7 @@
         <!-- /.container -->
     </nav>
 
-    <div class="container" style="width:67%">
+    <div class="container">
 
         <div class="row">
             <div class="box">
